Fix logo and grid width on small screen sizes

--- a/src/components/speakers-block/style.css
+++ b/src/components/speakers-block/style.css
@@ -1,5 +1,5 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(272px, 1fr));
     grid-gap: 18px;
 }
