--- a/src/routes/speakers/style.css
+++ b/src/routes/speakers/style.css
@@ -5,6 +5,7 @@
 
 .logo {
     width: 360px;
+    max-width: 100%;
 }
 
 .title {
